clusters/central-tx-aus-canary/myapp/myapp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myapp
  labels:
    istio-injection: enabled
