clusters/central-tx-aus-canary/myapp/myapp/webv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webv-myapp
  namespace: myapp
  labels:
    app.kubernetes.io/name: webv-myapp
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
       maxSurge: 1
       maxUnavailable: 1
  selector:
    matchLabels:
      app: webv-myapp
  template:
    metadata:
      labels:
        app: webv-myapp
    spec:
      containers:
        - name: app
          image: ghcr.io/retaildevcrews/webv-red:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            failureThreshold: 10
            periodSeconds: 60
          startupProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 5
            failureThreshold: 60
            periodSeconds: 2
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "250m"
          args:
          - --sleep
          - "500"
          - --prometheus
          - --run-loop
          - --server
          - http://myapp:8080
          - --files
          - myapp-benchmark.json
          - --zone
          - dev
          - --region
          - dev
          - --log-format
          - Json

---
apiVersion: v1
kind: Service
metadata:
  name: webv-myapp
  namespace: myapp
  labels:
    app: webv-myapp
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: webv-myapp
